--- a/hive-api-tests/pom.xml
+++ b/hive-api-tests/pom.xml
@@ -16,8 +16,7 @@
     </parent>
 
     <properties>
-        <scala.version>2.11.2</scala.version>
-        <scala.dependencies.version>2.11</scala.dependencies.version>
+        <wiremock.version>1.50</wiremock.version>
     </properties>
 
     <dependencies>
@@ -26,23 +25,22 @@
             <artifactId>hive-api-scala</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
+
         <dependency>
             <groupId>com.wixpress.common</groupId>
             <artifactId>wix-framework-scala-dependencies</artifactId>
         </dependency>
+
         <dependency>
             <groupId>com.wixpress.common</groupId>
             <artifactId>wix-framework-scala-test-dependencies</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.specs2</groupId>
-                    <artifactId>specs2_2.10</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
+
         <dependency>
-            <groupId>org.specs2</groupId>
-            <artifactId>specs2_${scala.dependencies.version}</artifactId>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>${wiremock.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
