--- a/hive-api-scala/pom.xml
+++ b/hive-api-scala/pom.xml
@@ -8,17 +8,14 @@
     <packaging>jar</packaging>
     <name>Hive Scala API</name>
 
-    <parent>
-        <groupId>com.wixpress.common</groupId>
-        <artifactId>wix-scala-parent-ng</artifactId>
-        <version>100.0.0-SNAPSHOT</version>
-        <relativePath />
-    </parent>
-
     <properties>
+        <scala.dependencies.version>2.10</scala.dependencies.version>
         <dispatch.version>0.11.2</dispatch.version>
         <wiremock.version>1.50</wiremock.version>
         <ning.version>1.8.10</ning.version>
+        <jodatime.version>2.5</jodatime.version>
+        <jackson.version>2.4.3</jackson.version>
+        <specs2.version>2.4.6</specs2.version>
     </properties>
 
     <dependencies>
@@ -36,11 +33,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.wixpress.common</groupId>
-            <artifactId>wix-framework-scala-dependencies</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock</artifactId>
             <version>${wiremock.version}</version>
@@ -48,10 +40,54 @@
         </dependency>
 
         <dependency>
-            <groupId>com.wixpress.common</groupId>
-            <artifactId>wix-framework-scala-test-dependencies</artifactId>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${jodatime.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-jaxb-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-scala_${scala.dependencies.version}</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.specs2</groupId>
+            <artifactId>specs2_2.10</artifactId>
+            <version>${specs2.version}</version>
             <scope>test</scope>
         </dependency>
+
 
     </dependencies>
 
