--- a/hive-api-scala/pom.xml
+++ b/hive-api-scala/pom.xml
@@ -16,6 +16,7 @@
         <jodatime.version>2.5</jodatime.version>
         <jackson.version>2.4.3</jackson.version>
         <specs2.version>2.4.6</specs2.version>
+        <scalaz.stream.version>0.1</scalaz.stream.version>
     </properties>
 
     <dependencies>
@@ -83,10 +84,17 @@
 
         <dependency>
             <groupId>org.specs2</groupId>
-            <artifactId>specs2_2.10</artifactId>
+            <artifactId>specs2_${scala.dependencies.version}</artifactId>
             <version>${specs2.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.scalaz.stream</groupId>
+            <artifactId>scalaz-stream_${scala.dependencies.version}</artifactId>
+            <version>${scalaz.stream.version}</version>
+        </dependency>
+
 
 
     </dependencies>
