--- a/hive-api-scala/pom.xml
+++ b/hive-api-scala/pom.xml
@@ -19,6 +19,7 @@
         <specs2.version>2.4.6</specs2.version>
         <scalaz.stream.version>0.1</scalaz.stream.version>
         <joda.convert.version>1.2</joda.convert.version>
+        <config.version>1.2.1</config.version>
     </properties>
 
     <dependencies>
@@ -107,6 +108,12 @@
             <groupId>org.joda</groupId>
             <artifactId>joda-convert</artifactId>
             <version>${joda.convert.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>${config.version}</version>
         </dependency>
     </dependencies>
 
