moved instanceId from HiveClient to execute method.

--- a/hive-api-scala/src/main/resources/reference.conf
+++ b/hive-api-scala/src/main/resources/reference.conf
@@ -1,7 +1,7 @@
 hive-client {
   credentials {
-    appId = "appidxxx-8dc6-4ab9-992d-c65dd07edcf0"
-    appSecret = "secretxx-7e37-4de8-8cdd-7466c3045a42"
-    baseUrl = "https://openapi.wix.com"
+    appId = "your app-id here"
+    appSecret = "your secret-key here"
   }
+  baseUrl = "https://openapi.wix.com"
 }
