--- a/hive-api-scala-testkit/pom.xml
+++ b/hive-api-scala-testkit/pom.xml
@@ -3,16 +3,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wixpress</groupId>
-    <artifactId>hive-api-scala-tests</artifactId>
+    <artifactId>hive-api-scala-testkit</artifactId>
     <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>Hive Scala API - Tests</name>
+    <name>Hive Scala API - Testkit</name>
 
     <properties>
         <scala.version>2.10.4</scala.version>
         <scala.dependencies.version>2.10</scala.dependencies.version>
+
         <wiremock.version>1.50</wiremock.version>
-        <specs2.version>2.4.11</specs2.version>
     </properties>
 
     <dependencies>
@@ -21,6 +21,7 @@
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
+
 
         <dependency>
             <groupId>com.wixpress</groupId>
@@ -32,19 +33,6 @@
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock</artifactId>
             <version>${wiremock.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.specs2</groupId>
-            <artifactId>specs2_${scala.dependencies.version}</artifactId>
-            <version>${specs2.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.wixpress</groupId>
-            <artifactId>hive-api-scala-testkit</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
