--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Hive Scala API - Modules</name>
+    <description>Scala library to work with the HiveApi</description>
 
     <developers>
         <developer>
