--- a/hive-api-tests/pom.xml
+++ b/hive-api-tests/pom.xml
@@ -32,6 +32,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.wixpress</groupId>
+            <artifactId>hive-api-scala</artifactId>
+            <type>test-jar</type>
+            <version>1.4.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
