--- a/hive-api-tests/pom.xml
+++ b/hive-api-tests/pom.xml
@@ -18,6 +18,7 @@
         <wiremock.version>1.50</wiremock.version>
         <specs2.version>2.3.12</specs2.version>
         <quasiquotes.version>2.1.0-M1</quasiquotes.version>
+        <finagle-http.version>6.22.0</finagle-http.version>
     </properties>
 
     <dependencyManagement>
@@ -67,6 +68,13 @@
             <groupId>com.wixpress</groupId>
             <artifactId>hive-api-scala-testkit</artifactId>
             <version>1.4.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>finagle-http_${scala.dependencies.version}</artifactId>
+            <version>${finagle-http.version}</version>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
