--- a/hive-api-scala/pom.xml
+++ b/hive-api-scala/pom.xml
@@ -166,6 +166,13 @@
             <version>${spray-client.version}</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.10</artifactId>
+            <version>2.3.8</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
