--- a/hive-api-scala/pom.xml
+++ b/hive-api-scala/pom.xml
@@ -23,23 +23,23 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <scala.version>2.10.4</scala.version>
-        <scala.dependencies.version>2.10</scala.dependencies.version>
+        <scala.version>2.11.5</scala.version>
+        <scala.dependencies.version>2.11</scala.dependencies.version>
 
         <dispatch.version>0.11.2</dispatch.version>
         <wiremock.version>1.50</wiremock.version>
         <ning.version>1.8.10</ning.version>
         <jodatime.version>2.5</jodatime.version>
-        <jackson.version>2.4.3</jackson.version>
-        <specs2.version>2.4.6</specs2.version>
+        <jackson.version>2.4.4</jackson.version>
+        <specs2.version>2.4.15</specs2.version>
         <joda.convert.version>1.2</joda.convert.version>
         <config.version>1.2.1</config.version>
         <quasiquotes.version>2.1.0-M1</quasiquotes.version>
-        <finagle-http.version>6.22.0</finagle-http.version>
+        <finagle-http.version>6.24.0</finagle-http.version>
         <servlet.version>3.0.1</servlet.version>
         <commons-net.version>3.3</commons-net.version>
         <spring-test.version>4.1.1.RELEASE</spring-test.version>
-        <spray-client.version>1.2.0</spray-client.version>
+        <spray-client.version>1.3.2</spray-client.version>
     </properties>
 
     <repositories>
@@ -172,13 +172,13 @@
         </dependency>
         <dependency>
             <groupId>io.spray</groupId>
-            <artifactId>spray-client</artifactId>
+            <artifactId>spray-httpx_${scala.dependencies.version}</artifactId>
             <version>${spray-client.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor_2.10</artifactId>
+            <artifactId>akka-actor_${scala.dependencies.version}</artifactId>
             <version>2.3.8</version>
             <scope>test</scope>
         </dependency>
@@ -263,7 +263,7 @@
                 <artifactId>scala-maven-plugin</artifactId>
                 <version>3.1.5</version>
                 <configuration>
-                    <recompileMode>incremental</recompileMode>
+                    <!--<recompileMode>incremental</recompileMode>-->
                     <args>
                         <arg>-unchecked</arg>
                         <arg>-deprecation</arg>
