--- a/hive-api-scala/pom.xml
+++ b/hive-api-scala/pom.xml
@@ -157,6 +157,7 @@
             <groupId>com.twitter</groupId>
             <artifactId>finagle-http_${scala.dependencies.version}</artifactId>
             <version>${finagle-http.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
