Test-kit relies on the test-jar

--- a/hive-api-scala/pom.xml
+++ b/hive-api-scala/pom.xml
@@ -343,6 +343,7 @@
                             <includes>
                                 <include>**/drivers/*</include>
                                 <include>**/matchers/*</include>
+                                <include>**/infrastructure/*</include>
                             </includes>
                         </configuration>
                     </execution>
