--- a/hive-api-scala-testkit/pom.xml
+++ b/hive-api-scala-testkit/pom.xml
@@ -37,10 +37,16 @@
             <version>${scala.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.wixpress</groupId>
+            <artifactId>hive-api-scala</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.wixpress</groupId>
             <artifactId>hive-api-scala</artifactId>
+            <type>test-jar</type>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
 
