--- a/hive-api-scala-testkit/pom.xml
+++ b/hive-api-scala-testkit/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wixpress</groupId>
@@ -26,6 +27,7 @@
         <scala.version>2.11.5</scala.version>
         <scala.dependencies.version>2.11</scala.dependencies.version>
 
+        <specs2.version>2.4.15</specs2.version>
         <wiremock.version>1.50</wiremock.version>
         <finagle-http.version>6.24.0</finagle-http.version>
     </properties>
@@ -60,7 +62,13 @@
             <groupId>com.twitter</groupId>
             <artifactId>finagle-http_${scala.dependencies.version}</artifactId>
             <version>${finagle-http.version}</version>
-            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.specs2</groupId>
+            <artifactId>specs2_${scala.dependencies.version}</artifactId>
+            <version>${specs2.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
