wix specific x-wix-bi-token

--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,6 @@
     <modules>
         <module>hive-api-scala</module>
         <module>hive-api-scala-testkit</module>
+        <module>wix-hive-scala-wixapps</module>
     </modules>
 </project>
