--- a/hive-api-scala-testkit/pom.xml
+++ b/hive-api-scala-testkit/pom.xml
@@ -27,7 +27,8 @@
         <scala.version>2.11.5</scala.version>
         <scala.dependencies.version>2.11</scala.dependencies.version>
 
-        <specs2.version>2.4.15</specs2.version>
+        <org.specs2.version>2.4.15</org.specs2.version>
+
         <wiremock.version>1.50</wiremock.version>
         <finagle-http.version>6.24.0</finagle-http.version>
     </properties>
@@ -67,7 +68,7 @@
         <dependency>
             <groupId>org.specs2</groupId>
             <artifactId>specs2_${scala.dependencies.version}</artifactId>
-            <version>${specs2.version}</version>
+            <version>${org.specs2.version}</version>
         </dependency>
     </dependencies>
 
