--- a/hive-api-scala/pom.xml
+++ b/hive-api-scala/pom.xml
@@ -69,6 +69,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.wixpress</groupId>
+            <artifactId>hive-model</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
